--- a/src/multi-selector.tpl.html
+++ b/src/multi-selector.tpl.html
@@ -1,13 +1,17 @@
 <div class="tree-control">
-  <div class="tree-input form-control" ng-click="onControlClicked($event)">
+    <div class="tree-input form-control" ng-click="onControlClicked($event)">
     <span ng-if="selectedItems.length > 0" class="selected-items">
-      <span ng-repeat="i in selectedItems" class="selected-item">{{i.name}} <span class="selected-item-close" ng-click="deselectItem(i, $event)"></span></span>
+      <span ng-repeat="selectedItem in selectedItems" class="selected-item">{{selectedItem.name}} <span class="selected-item-close"
+                                                                                  ng-click="deselectItem(selectedItem, $event)"></span></span>
     </span>
-    <!-- <input type="text" class="blend-in" /> -->
-  </div>
-  <div class="tree-view" ng-show="showTree">
-    <ul>
-      <tree-item class="top-level" ng-repeat="item in data" item="item" select-only-leafs="selectOnlyLeafs" use-can-select-item="useCanSelectItemCallback" can-select-item="canSelectItem" multi-select="multiSelect" item-selected="itemSelected(item)" on-active-item="onActiveItem(item)" />
-    </ul>
-  </div>
+        <!-- <input type="text" class="blend-in" /> -->
+    </div>
+    <div class="tree-view" ng-show="showTree">
+        <ul>
+            <tree-item class="top-level" ng-repeat="item in data" item="item" select-only-leafs="selectOnlyLeafs"
+                       use-can-select-item="useCanSelectItemCallback" can-select-item="canSelectItem"
+                       multi-select="multiSelect" item-selected="itemSelected(item)"
+                       on-active-item="onActiveItem(item)"/>
+        </ul>
+    </div>
 </div>
