--- a/src/multi-selector.tpl.html
+++ b/src/multi-selector.tpl.html
@@ -6,11 +6,19 @@
     </span>
     </div>
     <div class="tree-view" ng-show="showTree">
+        <div class="helper-container">
+            <div class="line" >
+                <button type="button" ng-click="select( 'none', $event );" class="helper-button">×&nbsp; Select None</button>
+                <button type="button" ng-click="select( 'reset', $event );" class="helper-button">↶&nbsp; Reset</button>
+            </div>
+        </div>
+        <div class="tree-container">
         <ul>
             <tree-item class="top-level" ng-repeat="item in data" item="item" select-only-leafs="selectOnlyLeafs"
                        use-can-select-item="useCanSelectItemCallback" can-select-item="canSelectItem"
                        multi-select="multiSelect" item-selected="itemSelected(item)"
                        on-active-item="onActiveItem(item)"></tree-item>
         </ul>
+        </div>
     </div>
 </div>
