click event fixes.

--- a/src/multi-selector.tpl.html
+++ b/src/multi-selector.tpl.html
@@ -7,11 +7,11 @@
     </div>
     <div class="tree-view" ng-show="showTree">
         <div class="helper-container">
-            <div class="line" >
+           <!-- <div class="line" >
                 <button type="button" ng-click="select( 'none', $event );" class="helper-button">×&nbsp; Select None</button>
                 <button type="button" ng-click="select( 'reset', $event );" class="helper-button">↶&nbsp; Reset</button>
-            </div>
-            <div class="line" style="position:relative" >
+            </div>-->
+            <div class="line">
                 <input placeholder="Search..." type="text" ng-click="select( 'filter', $event )" class="input-filter">
                 <button type="button" class="clear-button">×</button>
             </div>
