--- a/src/multi-selector.tpl.html
+++ b/src/multi-selector.tpl.html
@@ -12,13 +12,13 @@
                 <button type="button" ng-click="select( 'reset', $event );" class="helper-button">↶&nbsp; Reset</button>
             </div>-->
             <div class="line">
-                <input placeholder="Search..." type="text" ng-click="select( 'filter', $event )" class="input-filter">
+                <input placeholder="Search..." type="text" ng-model="filterKeyword" ng-click="onFilterClicked($event)" class="input-filter">
                 <button type="button" class="clear-button">×</button>
             </div>
         </div>
         <div class="tree-container">
         <ul>
-            <tree-item class="top-level" ng-repeat="item in data" item="item" select-only-leafs="selectOnlyLeafs"
+            <tree-item class="top-level" ng-repeat="item in data" item="item" select-only-leafs="selectOnlyLeafs" ng-show="!item.isFiltered"
                        use-can-select-item="useCanSelectItemCallback" can-select-item="canSelectItem"
                        multi-select="multiSelect" item-selected="itemSelected(item)"
                        on-active-item="onActiveItem(item)"></tree-item>
