--- a/demo/index.html
+++ b/demo/index.html
@@ -25,8 +25,8 @@
             <h2>Multi-select</h2>
 
             <div class="col-md-6">
-                <multi-selector data="data2" multi-select="true"
-                                   on-selection-changed="selectedItem2 = onSelectionChanged(items)"></multi-selector>
+                <multi-selector data-input-model="data2" multi-select="true"
+                                   data-output-model="selectedItem2"></multi-selector>
                 <br/>Selected items: {{selectedItem2}}
             </div>
 
