--- a/src/tree-item.tpl.html
+++ b/src/tree-item.tpl.html
@@ -1,8 +1,8 @@
 <li>
     <div class="item-container" ng-class="{active: item.isActive, selected: item.selected}"
          ng-click="clickSelectItem(item, $event)" ng-mouseover="onMouseOver(item, $event)">
-        <span ng-if="showExpando(item)" class="expando" ng-class="{'expando-opened': item.isExpanded}"
-              ng-click="onExpandoClicked(item, $event)"></span>
+        <span ng-if="showExpand(item)" class="expand" ng-class="{'expand-opened': item.isExpanded}"
+              ng-click="onExpandClicked(item, $event)"></span>
 
         <div class="item-details"><input class="tree-checkbox" type="checkbox" ng-if="showCheckbox()"
                                          ng-checked="item.selected"/>{{item.name}}
