added default label property.

--- a/demo/index.html
+++ b/demo/index.html
@@ -25,8 +25,8 @@
             <h2>Multi-select</h2>
 
             <div class="col-md-6">
-                <multi-selector data-input-model="data2" multi-select="true"
-                                   data-output-model="selectedItem2"></multi-selector>
+                <multi-select-tree data-input-model="data2" multi-select="true"
+                                   data-output-model="selectedItem2" data-default-label="Click here to Select..."></multi-select-tree>
                 <br/>Selected items: {{selectedItem2}}
             </div>
 
