code re factor for the callback.

--- a/src/multi-select-tree.tpl.html
+++ b/src/multi-select-tree.tpl.html
@@ -23,7 +23,7 @@
         </div>
         <ul class="tree-container">
             <tree-item class="top-level" ng-repeat="item in inputModel" item="item" ng-show="!item.isFiltered"
-                       use-can-select-item="useCanSelectItemCallback" can-select-item="canSelectItem"
+                       use-callback="useCallback" can-select-item="canSelectItem"
                        multi-select="multiSelect" item-selected="itemSelected(item)"
                        on-active-item="onActiveItem(item)"></tree-item>
         </ul>
