--- a/src/tree-item.tpl.html
+++ b/src/tree-item.tpl.html
@@ -9,7 +9,7 @@
         </div>
     </div>
     <ul ng-repeat="child in item.children" ng-if="item.isExpanded">
-        <tree-item item="child" item-selected="subItemSelected(item)" use-can-select-item="useCanSelectItem"
+        <tree-item item="child" item-selected="subItemSelected(item)" use-callback="useCallback"
                    can-select-item="canSelectItem" multi-select="multiSelect"
                    on-active-item="activeSubItem(item, $event)"></tree-item>
     </ul>
