--- a/src/multi-select-tree.tpl.html
+++ b/src/multi-select-tree.tpl.html
@@ -13,10 +13,10 @@
     </div>
     <div class="tree-view" ng-show="showTree">
         <div class="helper-container">
-            <!-- <div class="line" >
+             <div class="line" >
                  <button type="button" ng-click="select( 'none', $event );" class="helper-button">×&nbsp; Select None</button>
                  <button type="button" ng-click="select( 'reset', $event );" class="helper-button">↶&nbsp; Reset</button>
-             </div>-->
+             </div>
             <div class="line">
                 <input placeholder="Search..." type="text" ng-model="filterKeyword" ng-click="onFilterClicked($event)"
                        class="input-filter">
